modify: changepassword HTML FILE , problems css to join it into html page

--- a/server/src/view/resetpassword.jade
+++ b/server/src/view/resetpassword.jade
@@ -1,32 +1,74 @@
 doctype html
-html
+// Created By CodingNepal - www.codingnepalweb.com
+html(dir='ltr' lang='en')
   head
-    title= title
-    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
-    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
-    script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
-  body
-    .navbar.navbar-inverse.navbar-static-top(role='navigation')
-      .container
-        .navbar-header
-          button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand(href='/') ENNA 
-        .collapse.navbar-collapse
-         
-    .container
-      block content
+    meta(charset='utf-8')
+    title Confirm Password Check | CodingNepal
+    link(href="style.css", rel="stylesheet")
 
-  form(method='POST')
-    legend Reset Password
-    .form-group
-      label(for='password') New Password
-      input.form-control(type='password', name='password', value='', placeholder='New password', autofocus=true)
-    .form-group
-      label(for='confirm') Confirm Password
-      input.form-control(type='password', name='confirm', value='', placeholder='Confirm password')
-    .form-group
-      button.btn.btn-primary(type='submit') Update Password
+    
+  body
+    .container
+      header
+        | Confirm Password Check in 
+        br
+        | HTML CSS &amp; JavaScript
+      form(method ='POST')
+        .error-text
+        .field
+          input#pswrd_1(onkeyup='active()' type='password' placeholder='Enter Password')
+        .field
+          input#pswrd_2(onkeyup='active_2()' disabled='' type='password' placeholder='Confirm Password')
+          .show
+            | SHOW
+        button(disabled='') Check
+    script.
+      const pswrd_1 = document.querySelector("#pswrd_1");
+      const pswrd_2 = document.querySelector("#pswrd_2");
+      const errorText = document.querySelector(".error-text");
+      const showBtn = document.querySelector(".show");
+      const btn = document.querySelector("button");
+      function active() {
+      if (pswrd_1.value.length >= 6) {
+      btn.removeAttribute("disabled", "");
+      btn.classList.add("active");
+      pswrd_2.removeAttribute("disabled", "");
+      } else {
+      btn.setAttribute("disabled", "");
+      btn.classList.remove("active");
+      pswrd_2.setAttribute("disabled", "");
+      }
+      }
+      btn.onclick = function () {
+      if (pswrd_1.value != pswrd_2.value) {
+      errorText.style.display = "block";
+      errorText.classList.remove("matched");
+      errorText.textContent = "Error! Confirm Password Not Match";
+      return false;
+      } else {
+      errorText.style.display = "block";
+      errorText.classList.add("matched");
+      errorText.textContent = "Nice! Confirm Password Matched";
+      return false;
+      }
+      }
+      function active_2() {
+      if (pswrd_2.value != "") {
+      showBtn.style.display = "block";
+      showBtn.onclick = function () {
+      if ((pswrd_1.type == "password") && (pswrd_2.type == "password")) {
+      pswrd_1.type = "text";
+      pswrd_2.type = "text";
+      this.textContent = "Hide";
+      this.classList.add("active");
+      } else {
+      pswrd_1.type = "password";
+      pswrd_2.type = "password";
+      this.textContent = "Show";
+      this.classList.remove("active");
+      }
+      }
+      } else {
+      showBtn.style.display = "none";
+      }
+      }
