add: success.ejs to success tu password, problem with post method in html or route

--- a/server/src/view/checkPassword.ejs
+++ b/server/src/view/checkPassword.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal - www.codingnepalweb.com -->
+
 <html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
-  <title>Confirm Password Check | CodingNepal</title>
+  <title>Confirm Password Check </title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -22,7 +22,7 @@
           SHOW
         </div>
       </div>
-      <button disabled>Check</button>
+      <button type="submit" disabled>Check</button>
     </form>
   </div>
   <script>
