maintain: ejs file change password with success

--- a/server/src/view/checkPassword.ejs
+++ b/server/src/view/checkPassword.ejs
@@ -4,25 +4,25 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Confirm Password Check </title>
+  <title>Change your password </title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
   <div class="container">
     <header>Confirm Password Check in <br>HTML CSS & JavaScript</header>
-    <form method="POST">
+    <form action="" method="POST">
       <div class="error-text"></div>
       <div class="field">
         <input onkeyup="active()" id="pswrd_1" type="password" placeholder="Enter Password">
       </div>
       <div class="field">
-        <input onkeyup="active_2()" id="pswrd_2" disabled type="password" placeholder="Confirm Password">
+        <input onkeyup="active_2()" id="pswrd_2" name="password" type="password" placeholder="Confirm Password">
         <div class="show">
           SHOW
         </div>
       </div>
-      <button type="submit" disabled>Check</button>
+      <button type="submit">Check</button>
     </form>
   </div>
   <script>
@@ -52,7 +52,6 @@
         errorText.style.display = "block";
         errorText.classList.add("matched");
         errorText.textContent = "Nice! Confirm Password Matched";
-        return false;
       }
     }
     function active_2() {
