modify: checkpassword sign in ...

--- a/server/src/view/checkPassword.ejs
+++ b/server/src/view/checkPassword.ejs
@@ -10,7 +10,7 @@
 
 <body>
   <div class="container">
-    <header>Confirm Password Check in <br>HTML CSS & JavaScript</header>
+    <header>Confirm Password Check in <br></header>
     <form action="" method="POST">
       <div class="error-text"></div>
       <div class="field">
