on essaie de faire le token de co

--- a/server/src/public/css/style.css
+++ b/server/src/public/css/style.css
@@ -85,7 +85,7 @@ form button{
   margin: 3px 0 10px 0;
   border: none;
   outline: none;
-  background: #27ae60;
+  background: #4632A1;
   border-radius: 5px;
   color: #fff;
   font-size: 18px;
