--- a/server/src/view/success.ejs
+++ b/server/src/view/success.ejs
@@ -38,14 +38,14 @@
       font-size: 25px;
       font-weight: 600;
       line-height: 33px;
-      color: rgb(4, 160, 250);
+      color: #4632A1;
     }
   </style>
 </head>
 
 <body>
   <div class="container">
-    <header>Votre mot de passe <br>a été changer avec succé</header>
+    <header>Votre mot de passe <br>a été changer avec succès</header>
 
   </div>
 
